trunk/Archive2/77/6ff482d043358f/output
main.cpp: In function 'int check()':
main.cpp:18:5: error: redefinition of 'int check()'
 int check() {
     ^
main.cpp:1:5: note: 'int check()' previously defined here
 int check()
     ^
main.cpp:19:17: error: 'ar' was not declared in this scope
     int* view = ar;
                 ^
main.cpp: In lambda function:
main.cpp:21:13: warning: unused variable 'start' [-Wunused-variable]
         int start = num * 9;
             ^
bash: line 8: ./a.out: No such file or directory
